# FSPD-SCORP

./: README  README.md
anthill/: CMakeLists.txt
anthill/data/: graph_small2.txt  graph_small3.txt  teste30000.txt
anthill/src/: CMakeLists.txt  Graph.cpp  Graph.h  ManagerFilter.cpp  ManagerFilter.h  PrinterFilter.cpp  PrinterFilter.h  ProcessFilter.cpp  ProcessFilter.h  QuasiClique.cpp  QuasiClique.h  Util.cpp  Util.h  main.cpp
serial/: CMakeLists.txt
serial/data/: graph_small.txt  graph_small2.txt  graph_small3.txt
serial/src/: Attribute.cpp  Attribute.h  CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  QuasiClique.cpp  QuasiClique.h  Util.cpp  Util.h  Vertex.cpp  Vertex.h  main.cpp
